# GameOfSet

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/api/v1/: __init__.py  routers.py
app/api/v1/endpoints/: sets.py
app/core/: authentication.py  config.py  init_app.py  set_finder.py
app/interfaces/: set_finder.py
app/models/: card.py
scripts/: encode_credentials.py  setup.py
tests/: conftest.py  test_find_sets.py
