[tool.poetry]
name = "gameofset"
version = "0.1.0"
description = "Rest API for the game of Set!"
authors = ["Jose Andres Moya Porras <jose.91cr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
